--- a/index.html
+++ b/index.html
@@ -10,9 +10,27 @@
 </head>
 
 <body>
+<header class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <h2>Welcome to the slap game!</h2>
+    </div>
+  </div>
+</header>
 
+<main class="">
+  <div class="row justify-content-center">
+    <div class="col-8 bg-pumpkin"></div>
+  </div>
+</main>
 
-
+<footer class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <h3>Thanks for playing!</h3>
+    </div>
+  </div>
+</footer>
 
   <script src="game.js"></script>
 </body>
